--- a/index.html
+++ b/index.html
@@ -70,61 +70,61 @@
             ></p>
           </div>
 
-<!-- Currency Selection -->
-<div class="grid md:grid-cols-2 gap-4">
-  <div>
-    <label class="block mb-2 font-semibold"
-      >✈️ Destination Currency</label
-    >
-    <div class="currency-select">
-      <button class="currency-button" id="baseCurrencyBtn">
-        <span id="baseDisplay">Select Currency</span>
-        <span>▼</span>
-      </button>
-      <div class="currency-dropdown" id="baseDropdown">
-        <input
-          type="text"
-          id="baseSearch"
-          placeholder="Search..."
-          style="
-            width: calc(100% - 2rem);
-            margin: 0.5rem 1rem;
-            padding: 0.5rem;
-            border-radius: 0.5rem;
-            border: 1px solid var(--border-color);
-            background: var(--bg-secondary);
-          "
-        />
-        <div id="baseOptions"></div>
-      </div>
-    </div>
-  </div>
-  <div>
-    <label class="block mb-2 font-semibold">🏠 Home Currency</label>
-    <div class="currency-select">
-      <button class="currency-button" id="targetCurrencyBtn">
-        <span id="targetDisplay">Select Currency</span>
-        <span>▼</span>
-      </button>
-      <div class="currency-dropdown" id="targetDropdown">
-        <input
-          type="text"
-          id="targetSearch"
-          placeholder="Search..."
-          style="
-            width: calc(100% - 2rem);
-            margin: 0.5rem 1rem;
-            padding: 0.5rem;
-            border-radius: 0.5rem;
-            border: 1px solid var(--border-color);
-            background: var(--bg-secondary);
-          "
-        />
-        <div id="targetOptions"></div>
-      </div>
-    </div>
-  </div>
-</div>
+          <!-- Currency Selection -->
+          <div class="grid md:grid-cols-2 gap-4">
+            <div>
+              <label class="block mb-2 font-semibold"
+                >✈️ Destination Currency</label
+              >
+              <div class="currency-select">
+                <button class="currency-button" id="baseCurrencyBtn">
+                  <span id="baseDisplay">Select Currency</span>
+                  <span>▼</span>
+                </button>
+                <div class="currency-dropdown" id="baseDropdown">
+                  <input
+                    type="text"
+                    id="baseSearch"
+                    placeholder="Search..."
+                    style="
+                      width: calc(100% - 2rem);
+                      margin: 0.5rem 1rem;
+                      padding: 0.5rem;
+                      border-radius: 0.5rem;
+                      border: 1px solid var(--border-color);
+                      background: var(--bg-secondary);
+                    "
+                  />
+                  <div id="baseOptions"></div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <label class="block mb-2 font-semibold">🏠 Home Currency</label>
+              <div class="currency-select">
+                <button class="currency-button" id="targetCurrencyBtn">
+                  <span id="targetDisplay">Select Currency</span>
+                  <span>▼</span>
+                </button>
+                <div class="currency-dropdown" id="targetDropdown">
+                  <input
+                    type="text"
+                    id="targetSearch"
+                    placeholder="Search..."
+                    style="
+                      width: calc(100% - 2rem);
+                      margin: 0.5rem 1rem;
+                      padding: 0.5rem;
+                      border-radius: 0.5rem;
+                      border: 1px solid var(--border-color);
+                      background: var(--bg-secondary);
+                    "
+                  />
+                  <div id="targetOptions"></div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- Game Settings -->
           <div class="space-y-4">
             <div>
@@ -133,6 +133,19 @@
                 <span class="font-semibold"
                   >Enable reverse mode (bidirectional practice)</span
                 >
+              </label>
+            </div>
+            <div>
+              <label class="flex items-center gap-2 cursor-pointer">
+                <input
+                  type="checkbox"
+                  id="prevAnswerToggle"
+                  class="w-5 h-5"
+                  onclick="togglePreviousAnswerWidget()"
+                />
+                <span class="font-semibold">
+                  Show Previous Answer Accuracy
+                </span>
               </label>
             </div>
             <div>
@@ -147,7 +160,7 @@
                   Free Play
                 </button>
                 <input
-                  type="number"
+                  type="text"
                   id="timerInput"
                   class="flex-1 p-3 border-2 rounded-lg"
                   style="
@@ -218,12 +231,7 @@
 
           <!-- Answer Input -->
           <div>
-            <input
-              type="number"
-              id="answerInput"
-              placeholder="Enter amount..."
-              step="0.01"
-            />
+            <input type="text" id="answerInput" placeholder="Enter amount..." />
           </div>
 
           <!-- Actions -->
@@ -244,6 +252,15 @@
               <span id="questionCount" class="font-bold">0</span>
             </p>
           </div>
+          <!-- Previous Answer Widget -->
+          <div id="previousAnswerWidget" style="border-radius: .75rem; padding: 10px; text-align: center; display: none">
+            Prompt: <span id="prevAnswerPrompt"></span> | Your Ans: <span
+              id="prevAnswerUser"
+            ></span>
+            | Correct Ans: <span id="prevAnswerCorrect"></span> | Accuracy: <span
+              id="prevAnswerAccuracy"
+            ></span>
+          </div>
         </div>
       </div>
 
@@ -254,7 +271,9 @@
         style="display: none"
       >
         <div class="card">
-          <h2 class="text-2xl font-bold mb-6 text-center">Game Results</h2>
+          <h2 id="resultsTitle" class="text-2xl font-bold mb-6 text-center">
+            Game Results
+          </h2>
 
           <!-- Summary Stats -->
           <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
@@ -457,8 +476,7 @@
         </div>
       </div>
     </div>
-<script src="currencyData.js"></script>
+    <script src="currencyData.js"></script>
     <script src="script.js"></script>
-
   </body>
 </html>
