--- a/index.html
+++ b/index.html
@@ -351,6 +351,14 @@
       class="text-center py-8 mt-12"
       style="color: var(--text-secondary); font-size: 0.875rem"
     >
+    <a href="https://www.kylescheer.com/conversion-game" target="_blank"
+            >
+        <button
+          class="bg-blue-100 text-gray-700 py-3 rounded-xl font-bold hover:bg-gray-200 transition-all" style="margin: .5rem; padding: 1rem"
+        >
+
+            ConvertQuest - Unit Conversion Game 💱
+        </button></a><br>
       <p class="mb-2">Data saved locally in your browser</p>
       <p class="mb-2">
         Made by
